# lonboard

./: .env.example  .gitignore  .npmrc  .pre-commit-config.yaml  .prettierrc.json  404.html  ATL03-example.ipynb  CHANGELOG.md  COG_LAYER_EVALUATION.md  DEVELOP.md  LICENSE  MANIFEST.in  README.md  Untitled.ipynb  Untitled2.ipynb  biome.json  build.mjs  cog-tile-testing.ipynb  eslint.config.js  geotiff-testing.ipynb  index.html  mkdocs.yml  objects.inv  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  sitemap.xml  tailwind.config.js  tmp4.py  tmp_graph.py  tmp_line_graph.py  tsconfig.json  versions.json  vitest.config.ts
.binder/: requirements.txt
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug---a-user-discovered-bug.md  epic---a-user-story-or-overall-goal-for-a-subset-of-issues--tasks-.md  epic---a-user-story-or-overall-goal-for-a-subset-of-issues-and-tasks.md
.github/workflows/: build-binder-image.yml  conventional-commits.yml  deploy-mkdocs.yml  release.yml  test-js.yml  test.yml
alternatives/: index.html
api/colormap/: index.html
api/traits/: index.html
api/viz/: index.html
deck_widget/: __init__.py  widget.py
deck_widget/geoarrow/: extension_types.py  geopandas_interop.py
docs/: alternatives.md  cli.md  external-resources.md  how-it-works.md  index.md  performance.md
docs/accessors/: index.md
docs/api/: basemap.md  colormap.md  controls.md  map.md  models.md  raster.md  top-level.md  traits.md  view.md  view_state.md  viz.md
docs/blog/: .authors.yml
docs/ecosystem/: duckdb.md  geoarrow.md  geopandas.md  panel.md  pyodide.md  shiny.md
docs/how-it-works/: index.md  internals.md
docs/layers/: path-layer.md  scatterplot-layer.md  solid-polygon-layer.md
examples/: !category_filter.ipynb  Untitled.ipynb  air-traffic-control.ipynb  ais-movingpandas.ipynb  american-community-survey.ipynb  clicked-point.ipynb  column-layer.ipynb  data-filter-extension-categorical.ipynb  data-filter-extension.ipynb  duckdb.ipynb  explore.ipynb  geocoder-control.ipynb  global-boundaries.ipynb  height_changes.ipynb  index.md  interleaved-labels.ipynb  internet-speeds.ipynb  layer_control.ipynb  linked-maps.ipynb  lonboard-table-of-contents.ipynb  migration.ipynb  north-america-roads.ipynb  nyc_taxi_trips.py  overture-buildings.ipynb  overture-geoparquet.ipynb  overture-maps.ipynb  raster-cog-basic.ipynb  raster-cog-nlcd-server.ipynb  raster-cog-rgb-server.ipynb  raster-cog-rgb.ipynb  raster-nlcd.ipynb  raster-pmtiles.ipynb  ship-data.ipynb
examples/integrations/: sidecar.ipynb
examples/internet-speeds/: index.html
examples/layers/: bitmap-layer.ipynb
examples/map_challenge/: 1-points.ipynb  6-asia.ipynb
examples/marimo/: README.md  nyc_taxi_trips.md  nyc_taxi_trips.py
examples/north-america-roads/: index.html  north-america-roads.ipynb
examples/shiny/: app.py  pyproject.toml
how-it-works/: index.html
latest/: 404.html  index.html  objects.inv  sitemap.xml
latest/CHANGELOG/: CHANGELOG.md  index.html
latest/alternatives/: index.html
latest/cli/: index.html
latest/ecosystem/: index.html
latest/examples/: index.html  index.md
latest/external-resources/: index.html
latest/how-it-works/: how-it-works.md  index.html
latest/performance/: index.html
latest/search/: search_index.json
latest/troubleshooting/: index.html
lonboard/: __init__.py  __main__.py  _base.py  _cli.py  _compat.py  _constants.py  _deck_widget.py  _dispatch.py  _duckdb.py  _environment.py  _exception_display.py  _executor.py  _h3.py  _html_export.py  _layer.py  _map.py  _serialization.py  _testing.py  _utils.py  _version.py  _view.py  _viewport.py  _viz.py  basemap.py  colormap.py  config.py  constants.py  controls.py  geopandas.py  layer.py  layer_extension.py  models.py  serialization.py  traits.py  types.py  utils.py  view.py  view_state.py  viewport.py  viz.py  (+1 more)
lonboard/_geoarrow/: __init__.py  _duckdb.py  box_to_polygon.py  c_stream_import.py  crs.py  extension_types.py  geopandas_interop.py  movingpandas_interop.py  parse_wkb.py  row_index.py  sanitize.py  utils.py
lonboard/_h3/: __init__.py  _h3_to_str.py  _str_to_h3.py  _validate_h3_cell.py
performance/: index.html
search/: search_index.json
src/: accessor.ts  dispatch.ts  extensions.ts  globals.css  globe-map.tsx  icons.tsx  index.jsx  index.tsx  linestring.tsx  model.ts  parquet.ts  path-layer.tsx  point.ts  point.tsx  polygon.tsx  scatterplot-layer.tsx  solid-polygon-layer.tsx  state.ts  store.ts  toolbar.tsx  types.ts  util.ts  widget-style.css
tests/: compat.py  test_box.py  test_cli.py  test_colormap.py  test_duckdb.py  test_executor.py  test_geoarrow.py  test_h3.py  test_layer.py  test_map.py  test_traits.py  test_viz.py  tmp.py
v0.1.2/: index.html  index.md  sitemap.xml
v0.10.0/: 404.html  sitemap.xml
v0.10.1/: objects.inv  sitemap.xml
v0.10.2/: index.html  sitemap.xml
v0.10.3/: sitemap.xml
v0.10.4/: 404.html  index.html  objects.inv  sitemap.xml
v0.11.0/: objects.inv  sitemap.xml
v0.11.1/: 404.html  index.html  sitemap.xml
v0.12.0/: 404.html  index.html  objects.inv  sitemap.xml
v0.12.1/: 404.html  index.html  objects.inv  sitemap.xml
v0.13.0/: 404.html  index.html  objects.inv  sitemap.xml
v0.14.0/: 404.html  index.html  objects.inv  sitemap.xml
v0.15.0/: 404.html  index.html  objects.inv  sitemap.xml
v0.16.0/: 404.html  index.html  objects.inv  sitemap.xml
v0.2.0/: 404.html  index.html  objects.inv  sitemap.xml
v0.3.0/: 404.html  index.html  objects.inv  sitemap.xml
v0.4.0/: objects.inv  sitemap.xml
v0.4.1/: 404.html  sitemap.xml
v0.4.2/: index.html
v0.5.0/: 404.html  index.html  index.md  objects.inv  sitemap.xml
v0.6.0/: 404.html  index.html  index.md  objects.inv  sitemap.xml
v0.7.0/: 404.html  index.html  objects.inv  sitemap.xml
v0.7.1/: 404.html  index.html  index.md  sitemap.xml
v0.8.0/: 404.html  index.html  objects.inv  sitemap.xml
v0.9.0/: 404.html  index.html  sitemap.xml
v0.9.1/: sitemap.xml
v0.9.2/: sitemap.xml
v0.9.3/: index.html  objects.inv  sitemap.xml
(+1336 files in other folders)
