[tool.poetry]
name = "lonboard"
version = "0.6.0-beta.1"
description = "Python library for fast, interactive geospatial vector data visualization in Jupyter."
authors = ["Kyle Barron <kyle@developmentseed.org>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "lonboard" }]
include = ["lonboard/static/*.js", "lonboard/static/*.css"]

[tool.poetry.dependencies]
python = "^3.8"
anywidget = "^0.7.1"
pyarrow = ">=14.0.1"
geopandas = ">=0.13"
pandas = "^2"
palettable = "^3.3.3"
# We use the colormap module from matplotlib. This module may be vendored in the
# future to remove the matplotlib dependency.
matplotlib = "^3.7"
shapely = "^2"


[tool.poetry.group.dev.dependencies]
# anywidget = { version = "^0.7.1", extras = ["dev"] }
jupyterlab = "^4.0.5"
pre-commit = "^3.4.0"
pytest = "^7.4.2"
# We use ruff format ourselves, but mkdocstrings requires black to be installed
# to format signatures in the docs
black = "^23.10.1"
geoarrow-rust-core = "^0.1.0"
geodatasets = "^2023.12.0"
pyogrio = "^0.7.2"
geoarrow-pyarrow = "^0.1.1"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.3"
mkdocs-material = { version = "^9.5", extras = ["imaging"] }
mkdocstrings = {version = "^0.23.0", extras = ["python"]}
# This version only on 3.9+. Ok because it's a dev dependency
mkdocs-jupyter = {version = "^0.24.5", python = "^3.9"}
mike = "^2"

# Note: this is defined as a separate group so that it can be not installed in
# CI. See:
# https://github.com/developmentseed/lonboard/pull/234
# https://github.com/manzt/anywidget/issues/374
[tool.poetry.group.watchfiles.dependencies]
watchfiles = "^0.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    # isort
    "I"
]

[tool.ruff.extend-per-file-ignores]
"__init__.py" = [
    "F401", # Allow unused imports in __init__.py files
]
