[tool.poetry]
name = "lonboard"
version = "0.10.0-beta.2"
description = "Fast, interactive geospatial data visualization in Jupyter."
authors = ["Kyle Barron <kyle@developmentseed.org>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "lonboard" }]
include = ["lonboard/static/*.js", "lonboard/static/*.css", "MANIFEST.in"]
repository = "https://github.com/developmentseed/lonboard"
documentation = "https://developmentseed.org/lonboard/latest/"
keywords = [
    "GIS",
    "cartography",
    "visualization",
    "geopandas",
    "pandas",
    "shapely",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Jupyter",
    "Framework :: Jupyter :: JupyterLab",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: GIS",
]

[tool.poetry.dependencies]
python = "^3.8"
anywidget = "^0.9.0"
# Minimum version for generic type hints
traitlets = ">=5.10"
arro3-core = ">=0.3.0"
arro3-io = ">=0.3.0"
arro3-compute = ">=0.3.0"
ipywidgets = ">=7.6.0"
numpy = ">=1.14"
# The same version pin as geopandas
pyproj = ">=3.3"
typing-extensions = { version = "^4.6.0", python = "<3.12" }
click = { version = "^8.1.7", optional = true }
geopandas = { version = ">=0.13", optional = true }
pandas = { version = "^2", optional = true }
pyogrio = { version = ">=0.8", optional = true }
shapely = { version = "^2", optional = true }


[tool.poetry.extras]
cli = ["click", "pyogrio", "shapely"]
geopandas = ["geopandas", "pandas", "shapely"]

[tool.poetry.group.dev.dependencies]
duckdb = ">=0.10.2"
geoarrow-pyarrow = ">=0.1.1"
geoarrow-rust-core = ">=0.2.0"
geodatasets = ">=2023.12.0"
jupyterlab = ">=4.0.5"
matplotlib = ">=3.7"
palettable = ">=3.3.3"
pre-commit = ">=3.4.0"
pyarrow = ">=14.0.1"
pyogrio = ">=0.8"
pytest = ">=7.4.2"

[tool.poetry.group.docs.dependencies]
# We use ruff format ourselves, but mkdocstrings requires black to be installed
# to format signatures in the docs
black = "^23.10.1"
griffe-inherited-docstrings = "^1.0.0"
mkdocs = "^1.4.3"
mkdocs-material = { version = "^9.5", extras = ["imaging"] }
mkdocstrings = { version = "^0.25.1", extras = ["python"] }
# This version only on 3.9+. Ok because it's a dev dependency
mkdocs-jupyter = { version = "^0.24.5", python = "^3.9" }
mike = "^2"

[tool.poetry.scripts]
lonboard = "lonboard._cli:main"

# Note: this is defined as a separate group so that it can be not installed in
# CI. See:
# https://github.com/developmentseed/lonboard/pull/234
# https://github.com/manzt/anywidget/issues/374
[tool.poetry.group.watchfiles.dependencies]
watchfiles = "^0.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    # isort
    "I",
]

[tool.ruff.extend-per-file-ignores]
"__init__.py" = [
    "F401", # Allow unused imports in __init__.py files
]
